<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_comunity"
        android:icon="@drawable/baseline_people_24"
        android:title="@string/title_comunity" />

    <item
        android:id="@+id/navigation_camera"
        android:icon="@drawable/baseline_camera_alt_24"
        android:title="@string/title_camera"/>

    <item
        android:id="@+id/navigation_pestiside"
        android:icon="@drawable/baseline_grass_24"
        android:title="@string/title_pestiside" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/title_person"/>

</menu>