<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.futureengineerdev.gubugtani.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_comunity"
        android:name="com.futureengineerdev.gubugtani.ui.dashboard.ComunityFragment"
        android:label="@string/title_comunity"
        tools:layout="@layout/fragment_comunity" />

    <fragment
        android:id="@+id/navigation_pestiside"
        android:name="com.futureengineerdev.gubugtani.ui.notifications.PestisideFragment"
        android:label="@string/title_pestiside"
        tools:layout="@layout/fragment_pestiside" />

    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.futureengineerdev.gubugtani.ui.camera.CameraFragment"
        android:label="@string/title_camera"
        tools:layout="@layout/fragment_camera" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.futureengineerdev.gubugtani.ui.profile.ProfileFragment"
        android:label="@string/title_person"
        tools:layout="@layout/fragment_profile" />
</navigation>